--- a/app/src/main/res/layout/row_food.xml
+++ b/app/src/main/res/layout/row_food.xml
@@ -42,7 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="5dp"
-            android:text="kcal/100g"
+            android:text="kcal"
             app:layout_constraintStart_toEndOf="@+id/tvFoodCalorie"
             app:layout_constraintTop_toTopOf="@id/tvFoodCalorie" />
 
@@ -106,9 +106,28 @@
             android:layout_marginStart="144dp"
             android:text="Sült csirkecomb"
             app:layout_constraintBottom_toBottomOf="@+id/imageView"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView"
             app:layout_constraintTop_toTopOf="@+id/imageView"
-            app:layout_constraintVertical_bias="0.52" />
+            app:layout_constraintVertical_bias="0.241" />
+
+        <TextView
+            android:id="@+id/tvFoodQuantity"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100"
+            app:layout_constraintEnd_toEndOf="@+id/tvFoodName"
+            app:layout_constraintStart_toStartOf="@+id/tvFoodName"
+            app:layout_constraintTop_toBottomOf="@+id/tvFoodName" />
+
+        <TextView
+            android:id="@+id/tvHelperGramm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="g"
+            android:layout_marginStart="2dp"
+            app:layout_constraintStart_toEndOf="@+id/tvFoodQuantity"
+            app:layout_constraintBottom_toBottomOf="@+id/tvFoodQuantity"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
