--- a/app/src/main/res/layout/fragment_food.xml
+++ b/app/src/main/res/layout/fragment_food.xml
@@ -11,7 +11,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/app_bar"
+            android:id="@+id/app_barFood"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/Theme.FitnessPal.AppBarOverlay">
